# vhk-chatbot-workshop

./: README.md
juhendid/: Tööjuhend 36fe579fa3bb4d26a55e7d3ce4c4cc1f.md
juhendid/Tööjuhend 36fe579fa3bb4d26a55e7d3ce4c4cc1f/: Osa 0 - Juturoboti loogika joonis b4a7b2f812f945949f1f2b88ed7760bc.md  Osa 1 - Juturoboti seadistamine 3b8e217ce85b4b8fa8cd3e5938642dda.md  Osa 2 - Programmeerimiskeskonna ettevalmistamine j 6089efa0d9b84aceb5b006ec7691de8f.md  Osa 3 - Juturoboti eesmärk, API-de kasutamine 41e4bc9ffb7e4ba09fe43c256e8d3587.md  Osa 4 - Sisendi töötlemine, lemmatiseerimine, as e87fc8e1005b45e1a4708730c432ccf7.md  Osa 5 - Rakenduse loogika, API kasutamine vastaval 6047ee3e8c234c178fc81cc611c79bc4.md  Osa 6 - ChatGPT ja väljundi loomine b6d328318f8841d491f9d9c6bb156bcd.md  Osa 7 - Katsetused! e885ef5400bb40d8a81cbea0c624b0f3.md
kood/chatbot-workshop/: .env  README.md  pyproject.toml
kood/chatbot-workshop/src/: api.py  bot.py  chatgpt.py  main.py
